--- a/mi-app/package.json
+++ b/mi-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "dotenv": "^16.4.7",
+    "heatmap.js": "^2.0.5",
     "nodemailer": "^6.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,12 +16,12 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.0"
   },
- "scripts": {
-  "start": "cross-env HTTPS=false react-scripts --openssl-legacy-provider start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
+  "scripts": {
+    "start": "cross-env HTTPS=false react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
